<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="android.widget.LinearLayout">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_icon_app" />

    <TextView
        android:id="@+id/toolbarTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/home_title"
        android:textAppearance="@style/TextAppearance.ParallaxWallpaper.Title"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/actionFolder"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/bg_circle_glass"
        android:contentDescription="@string/cd_favorite"
        android:padding="10dp"
        android:src="@drawable/ic_favorite_border"
        android:visibility="gone"
        app:tint="?attr/colorOnBackground" />

    <ImageView
        android:id="@+id/actionSettings"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:background="@drawable/bg_circle_glass"
        android:contentDescription="@string/cd_settings"
        android:padding="10dp"
        android:src="@drawable/ic_settings"
        android:visibility="gone"
        app:tint="?attr/colorOnBackground" />
</merge>
